--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -1,6 +1,6 @@
 mj-section(padding="0" mj-class="bgW")
     mj-column
-        mj-image(padding="0" width="700px" src="./images/img1.jpg" alt="famille entrain de consulter ensemble une tablette numérique")/
+        mj-image(padding="0" width="700px" src="./images/imgPrincipal.jpg" alt="")/
 mj-section(padding="20px" mj-class="bgW")
     mj-column(border="1px solid #cecece" padding="10px")
         mj-text(padding="5px 0" padding-bottom="10px" align="center" mj-class="T18-500" letter-spacing="1px") #[strong A ne pas rater&nbsp;!]
