--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -1,7 +1,7 @@
 mjml
     //- Head
     mj-head
-        mj-title Découvrez notre sélection des meilleures promos
+        mj-title 5 choses à savoir sur les Répéteurs
         mj-font(name='Source Sans 3' href='https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap')
         mj-raw.
             <meta charset="UTF-8">
