mise en place des produits dans le bloc prod03

--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -40,9 +40,15 @@ mjml
         //- bloc header
         block header
             include ../includes/_header
-        //- bloc produits
-        block prod
-            include ../includes/_prod
+        //- bloc produits 1
+        block prod01
+            include ../includes/_prod01
+        //- bloc produits 2
+        block prod02
+            include ../includes/_prod02
+        //- bloc produits 3
+        block prod03
+            include ../includes/_prod03
         //- bloc footer
         block footer
             include ../includes/_footer
