--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -1,47 +1,39 @@
 mj-section(mj-class="bgW")
     //-Produit 1
     mj-column(width="50%" padding="10px")
-        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/orbi1.jpg" alt="Système Mesh Orbi WiFi 6")/
-        mj-text(align="center" padding="0" mj-class="T18-500") Système Mesh Orbi Wifi 6
-        mj-text(align="center" padding="0" mj-class="T18-500") AX1800 (RBK353)
-        mj-text(align="center" padding="0" mj-class="T18-500") #[strong jusqu'à 300m #[sup(style="font-size:10px") 2]]
-        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 349.99€] #[strong(style="color:#00A4DE") 299.99€]
+        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/net50wifi6.jpg" alt="Répéteur WiFi 6 Mesh AX1800")/
+        mj-text(align="center" padding="0" mj-class="T18-500") Répéteur WiFi 6 Mesh AX1800
+        mj-text(align="center" padding="0" mj-class="T18-500") (EAX20) #[strong Jusqu'à 1.8 Gbit/s]
+        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 179.99€] #[strong(style="color:#00A4DE") 129.99€]
         mj-button( mj-class="cTW bgB" href="#") j'en profite
     //-Produit 2
     mj-column(width="50%" padding="10px")
-        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/orbi2.jpg" alt="Système Mesh Orbi WiFi 6")/
-        mj-text(align="center" padding="0" mj-class="T18-500") Système Mesh Orbi Wifi 6
-        mj-text(align="center" padding="0" mj-class="T18-500") AX4200 (RBX753)
-        mj-text(align="center" padding="0" mj-class="T18-500") #[strong jusqu'à 525m #[sup(style="font-size:10px") 2]]
-        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 699.99€] #[strong(style="color:#00A4DE") 599.99€]
+        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/net80wifi6.jpg" alt="Répéteur WiFi 6 Mesh AX6000")/
+        mj-text(align="center" padding="0" mj-class="T18-500") Répéteur WiFi 6 Mesh AX6000
+        mj-text(align="center" padding="0" mj-class="T18-500") (EAX80) #[strong jusqu'à 6 Gbit/s]
+        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 299.99€] #[strong(style="color:#00A4DE") 219.99€]
         mj-button(mj-class="cTW bgB" href="#") j'en profite
     //-Produit 3
-    mj-column(width="50%" padding="10px")
-        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/mob1.jpg" alt="Routeur Mobile 4G")/
-        mj-text(align="center" padding="0" mj-class="T18-500") Routeur Mobile 4G
-        mj-text(align="center" padding="0" mj-class="T18-500") #[strong 1 Gbit/s] (MR1100)
-        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 309.99€] #[strong(style="color:#00A4DE") 279.99€]
+    mj-column(width="33.333333%" padding="10px")
+        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/netWhite20.jpg" alt="Répéteur WiFi Mesh Dual band (EX7300)")/
+        mj-text(align="center" padding="0" mj-class="T18-500") Répéteur WiFi Mesh
+        mj-text(align="center" padding="0" mj-class="T18-500") Dual band (EX7300)
+        mj-text(align="center" padding="0" mj-class="T18-500") #[strong Jusqu'à 2.2 Gbit/s]
+        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 94.99€] #[strong(style="color:#00A4DE") 74.99€]
         mj-button(mj-class="cTW bgB" href="#") j'en profite
     //-Produit 4
-    mj-column(width="50%" padding="10px")
-        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/mob2.jpg" alt="Routeur Mobile 4G")/
-        mj-text(align="center" padding="0" mj-class="T18-500") Routeur Mobile 4G
-        mj-text(align="center" padding="0" mj-class="T18-500") #[strong 2 Gbit/s] (MR2100)
+    mj-column(width="33.333333%" padding="10px")
+        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/netBlack25L.jpg" alt="Répéteur WiFi Mesh Dual band (EX7700)")/
+        mj-text(align="center" padding="0" mj-class="T18-500") Répéteur WiFi Mesh
+        mj-text(align="center" padding="0" mj-class="T18-500") Dual band (EX7700)
+        mj-text(align="center" padding="0" mj-class="T18-500") #[strong Jusqu'à 2.2 Gbit/s]
         mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 429.99€] #[strong(style="color:#00A4DE") 379.99€]
         mj-button(mj-class="cTW bgB" href="#") j'en profite
     //-Produit 5
-    mj-column(width="50%" padding="10px")
-        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/whiteProd.jpg" alt="Répéteur WiFi Mesh")/
+    mj-column(width="33.333333%" padding="10px")
+        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/netBlack25h.jpg" alt="Répéteur WiFi Mesh Tri band (EX8000)")/
         mj-text(align="center" padding="0" mj-class="T18-500") Répéteur WiFi Mesh
-        mj-text(align="center" padding="0" mj-class="T18-500") Dual band (EX7300)
-        mj-text(align="center" padding="0" mj-class="T18-500") #[strong jusqu'à 2.2 Gbit/s]
-        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 94.99€] #[strong(style="color:#00A4DE") 74.99€]
-        mj-button(mj-class="cTW bgB" href="#") j'en profite
-    //-Produit 6
-    mj-column(width="50%" padding="10px")
-        mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/blackProd.jpg" alt="Répéteur WiFi Mesh")/
-        mj-text(align="center" padding="0" mj-class="T18-500") Répéteur WiFi Mesh
-        mj-text(align="center" padding="0" mj-class="T18-500") Tri band (EX7700)
-        mj-text(align="center" padding="0" mj-class="T18-500") #[strong jusqu'à 2.2 Gbit/s] 
-        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 114.99€] #[strong(style="color:#00A4DE") 89.99€]
+        mj-text(align="center" padding="0" mj-class="T18-500") Tri band (EX8000)
+        mj-text(align="center" padding="0" mj-class="T18-500") #[strong jusqu'à 3 Gbit/s]
+        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 169.99€] #[strong(style="color:#00A4DE") 144.99€]
         mj-button(mj-class="cTW bgB" href="#") j'en profite
