--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -18,6 +18,7 @@
       <mj-class name="T30-300" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="30px" line-height="40px" font-weight="300"/>
       <mj-class name="T20-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="20px" line-height="35px" font-weight="500"/>
       <mj-class name="T18-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="18px" line-height="25px" font-weight="500"/>
+      <mj-class name="T17-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="17px" line-height="24px" font-weight="500"/>
       <mj-class name="T15-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="15px" line-height="22px" font-weight="500"/>
       <mj-class name="T16-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="20px" font-weight="500"/>
       <mj-class name="T15-300" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="15px" line-height="18px" font-weight="300"/>
@@ -57,52 +58,36 @@
         <mj-button align="center" mj-class="bgB cTW" href="#">Découvrir</mj-button>
       </mj-column>
     </mj-section>
+    <mj-section mj-class="bgW" padding="0">
+      <mj-column width="100%">
+        <mj-image padding="0" src="./images/planMaison.jpg" alt=""></mj-image>
+      </mj-column>
+    </mj-section>
     <mj-section mj-class="bgW">
       <mj-column width="50%" padding="10px">
-        <mj-image padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/orbi1.jpg" alt="Système Mesh Orbi WiFi 6"/>
-        <mj-text align="center" padding="0" mj-class="T18-500">Système Mesh Orbi Wifi 6</mj-text>
-        <mj-text align="center" padding="0" mj-class="T18-500">AX1800 (RBK353)</mj-text>
-        <mj-text align="center" padding="0" mj-class="T18-500"><strong>jusqu'à 300m <sup style="font-size:10px">2</sup></strong></mj-text>
-        <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">349.99€</span> <strong style="color:#00A4DE">299.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
+        <mj-text align="center" padding="0" mj-class="T17-500"><strong>1</strong></mj-text>
+        <mj-text align="center" padding="0" mj-class="T17-500" text-transform="uppercase"><strong>Norme wifi</strong></mj-text>
+        <mj-text align="center" padding="0" mj-class="T17-500">La dernière norme WiFi 6 est aussi disponible sur la catégorie des Répéteurs.</mj-text>
       </mj-column>
       <mj-column width="50%" padding="10px">
-        <mj-image padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/orbi2.jpg" alt="Système Mesh Orbi WiFi 6"/>
-        <mj-text align="center" padding="0" mj-class="T18-500">Système Mesh Orbi Wifi 6</mj-text>
-        <mj-text align="center" padding="0" mj-class="T18-500">AX4200 (RBX753)</mj-text>
-        <mj-text align="center" padding="0" mj-class="T18-500"><strong>jusqu'à 525m <sup style="font-size:10px">2</sup></strong></mj-text>
-        <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">699.99€</span> <strong style="color:#00A4DE">599.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
+        <mj-text align="center" padding="0" mj-class="T17-500"><strong>2</strong></mj-text>
+        <mj-text align="center" padding="0" mj-class="T17-500" text-transform="uppercase"><strong>Mode point d'accès</strong></mj-text>
+        <mj-text align="center" padding="0" mj-class="T17-500">Avec un Répéteur, vous avez la possibilité de couper le WiFi de votre box pour laisser le Répéteur jouer le rôle de point d'accès WiFi.</mj-text>
       </mj-column>
-      <mj-column width="50%" padding="10px">
-        <mj-image padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/mob1.jpg" alt="Routeur Mobile 4G"/>
-        <mj-text align="center" padding="0" mj-class="T18-500">Routeur Mobile 4G</mj-text>
-        <mj-text align="center" padding="0" mj-class="T18-500"><strong>1 Gbit/s</strong> (MR1100)</mj-text>
-        <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">309.99€</span> <strong style="color:#00A4DE">279.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
+      <mj-column width="33.333333%" padding="10px">
+        <mj-text align="center" padding="0" mj-class="T17-500"><strong>3</strong></mj-text>
+        <mj-text align="center" padding="0" mj-class="T17-500" text-transform="uppercase"><strong>Technologie mesh</strong></mj-text>
+        <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T17-500">Certains Répéteurs créent un WiFi Mesh pour profiter d'un seul nom WiFi et mot de passe.</mj-text>
       </mj-column>
-      <mj-column width="50%" padding="10px">
-        <mj-image padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/mob2.jpg" alt="Routeur Mobile 4G"/>
-        <mj-text align="center" padding="0" mj-class="T18-500">Routeur Mobile 4G</mj-text>
-        <mj-text align="center" padding="0" mj-class="T18-500"><strong>2 Gbit/s</strong> (MR2100)</mj-text>
-        <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">429.99€</span> <strong style="color:#00A4DE">379.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
+      <mj-column width="33.333333%" padding="10px">
+        <mj-text align="center" padding="0" mj-class="T17-500"><strong>4</strong></mj-text>
+        <mj-text align="center" padding="0" mj-class="T17-500" text-transform="uppercase"><strong>Comptabilité</strong></mj-text>
+        <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T17-500">Les Répéteurs NetGear sont compatibles avec toutes les box et modems qui existent sur le marché.</mj-text>
       </mj-column>
-      <mj-column width="50%" padding="10px">
-        <mj-image padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/whiteProd.jpg" alt="Répéteur WiFi Mesh"/>
-        <mj-text align="center" padding="0" mj-class="T18-500">Répéteur WiFi Mesh</mj-text>
-        <mj-text align="center" padding="0" mj-class="T18-500">Dual band (EX7300)</mj-text>
-        <mj-text align="center" padding="0" mj-class="T18-500"><strong>jusqu'à 2.2 Gbit/s</strong></mj-text>
-        <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">94.99€</span> <strong style="color:#00A4DE">74.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
-      </mj-column>
-      <mj-column width="50%" padding="10px">
-        <mj-image padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/blackProd.jpg" alt="Répéteur WiFi Mesh"/>
-        <mj-text align="center" padding="0" mj-class="T18-500">Répéteur WiFi Mesh</mj-text>
-        <mj-text align="center" padding="0" mj-class="T18-500">Tri band (EX7700)</mj-text>
-        <mj-text align="center" padding="0" mj-class="T18-500"><strong>jusqu'à 2.2 Gbit/s</strong> </mj-text>
-        <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">114.99€</span> <strong style="color:#00A4DE">89.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
+      <mj-column width="33.333333%" padding="10px">
+        <mj-text align="center" padding="0" mj-class="T17-500"><strong>5</strong></mj-text>
+        <mj-text align="center" padding="0" mj-class="T17-500" text-transform="uppercase"><strong>Vitesse</strong></mj-text>
+        <mj-text align="center" padding="0" mj-class="T17-500">Plusieurs modèles sont disponibles et à des vitesses différentes pouvant aller jusqu'à 6 Gbit/s.</mj-text>
       </mj-column>
     </mj-section>
     <mj-section mj-class="bgW">
