--- a/src/includes/_prod01.pug
+++ b/src/includes/_prod01.pug
@@ -3,7 +3,7 @@ mj-section(mj-class="bgW" padding="0")
         mj-image(padding="0" src="./images/planMaison.jpg" alt="")
 mj-section(mj-class="bgW")
     //-Produit 1
-    mj-column(width="50%" padding="10px")
+    mj-column(width="50%" padding="10px 20px" )
         mj-text(align="center" padding="0" mj-class="T17-500") #[strong 1]
         mj-text(align="center" padding="0" mj-class="T17-500" text-transform="uppercase") #[strong Norme wifi]
         mj-text(align="center" padding="0" mj-class="T17-500") La dernière norme WiFi 6 est aussi disponible sur la catégorie des Répéteurs.
@@ -21,7 +21,7 @@ mj-section(mj-class="bgW")
     mj-column(width="33.333333%" padding="10px")
         mj-text(align="center" padding="0" mj-class="T17-500") #[strong 4]
         mj-text(align="center" padding="0" mj-class="T17-500" text-transform="uppercase") #[strong Comptabilité]
-        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T17-500") Les Répéteurs NetGear sont compatibles avec toutes les box et modems qui existent sur le marché.
+        mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T17-500") Les Répéteurs #[span(style="text-transform:uppercase;") NetGear] sont compatibles avec toutes les box et modems qui existent sur le marché.
     //-Produit 5
     mj-column(width="33.333333%" padding="10px")
         mj-text(align="center" padding="0" mj-class="T17-500") #[strong 5]
