--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -1,3 +1,6 @@
+mj-section(mj-class="bgT1")
+    mj-column
+        mj-text(align="center" mj-class="cTW") Découvrez nos Répéteurs WiFi Mesh et profitez des promos en cours
 mj-section(mj-class="bgW")
     //-Produit 1
     mj-column(width="50%" padding="10px")
