--- a/src/includes/_prod03.pug
+++ b/src/includes/_prod03.pug
@@ -1,3 +1,7 @@
+mj-section(mj-class="bgB")
+    mj-column
+        mj-text(align="center" mj-class="cTW") Plutôt intéressé par les Systèmes Mesh Orbi WiFi 6 ?
+        mj-text(align="center" mj-class="cTW") Ne manquez pas notre promo en cours
 mj-section(mj-class="bgW")
     //-Produit 1
     mj-column(width="50%" padding="10px")
