travail sur le titre du bloc prod03

--- a/src/includes/_prod03.pug
+++ b/src/includes/_prod03.pug
@@ -1,7 +1,7 @@
-mj-section(mj-class="bgB")
+mj-section(mj-class="bgB" padding="25px 30px")
     mj-column
-        mj-text(align="center" mj-class="cTW") Plutôt intéressé par les Systèmes Mesh Orbi WiFi 6 ?
-        mj-text(align="center" mj-class="cTW") Ne manquez pas notre promo en cours
+        mj-text(align="center" padding="0" mj-class="T35-300 cTW" letter-spacing="2px") Plutôt intéressé par les&nbsp;Systèmes&nbsp;Mesh&nbsp;Orbi&nbsp;WiFi&nbsp;6&nbsp;?
+        mj-text(align="center" padding="0" mj-class="T20-300 cTW" letter-spacing="2px") Ne manquez pas notre promo en cours
 mj-section(mj-class="bgW")
     //-Produit 1
     mj-column(width="50%" padding="10px")
