--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -13,9 +13,11 @@ mjml
             <meta name="format-detection" content="email=no"/>
         mj-attributes
             mj-all(font-family='"Source Sans 3", Arial, Helvetica, sans serif')/
+            mj-class(name='T35-300' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='35px' line-height='45px' font-weight='300')/
             mj-class(name='T30-500' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='30px' line-height='40px' font-weight='500')/
             mj-class(name='T30-300' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='30px' line-height='40px' font-weight='300')/
             mj-class(name='T20-500' font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size='20px' line-height='35px' font-weight='500')/
+            mj-class(name='T20-300' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='20px' line-height='35px' font-weight='300')/
             mj-class(name='T18-500' font-family='Arial, Helvetica, sans-serif' font-style="normal" font-size='18px' line-height='25px' font-weight='500')/
             mj-class(name='T17-500' font-family='Arial, Helvetica, sans-serif' font-style="normal" font-size='17px' line-height='24px' font-weight='500')/
             mj-class(name='T15-500' font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size='15px' line-height='22px' font-weight='500')/
