--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -1,6 +1,6 @@
-mj-section(mj-class="bgT1")
+mj-section(mj-class="bgT1" padding="25px 35px")
     mj-column
-        mj-text(align="center" mj-class="cTW") Découvrez nos Répéteurs WiFi Mesh et profitez des promos en cours
+        mj-text(align="center" padding="0" mj-class="T35-300 cTW" letter-spacing="2px") Découvrez nos Répéteurs WiFi Mesh et profitez des promos en cours
 mj-section(mj-class="bgW")
     //-Produit 1
     mj-column(width="50%" padding="10px")
