--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -1,6 +1,6 @@
-mj-section(mj-class="bgT1")
+mj-section(mj-class="bgT1" padding="25px 35px")
     mj-column
-        mj-text(align="center" mj-class="cTW" ) 5 choses à savoir sur les Répéteurs
+        mj-text(align="center" padding="0" mj-class="T32-300 cTW" letter-spacing="2px") 5 choses à savoir sur les Répéteurs
 mj-section(padding="0" mj-class="bgW")
     mj-column
         mj-image(padding="0" width="700px" src="./images/imgPrincipal.jpg" alt="")/
