couleur des buttons du module prod02

--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -6,8 +6,8 @@ mj-section(padding="0" mj-class="bgW")
         mj-image(padding="0" width="700px" src="./images/imgPrincipal.jpg" alt="")/
 mj-section(padding="20px" mj-class="bgW")
     mj-column(border="1px solid #cecece" padding="10px")
-        mj-text(padding="5px 0" padding-bottom="10px" align="center" mj-class="T18-500" letter-spacing="1px") Boostez votre WiFi
-        mj-text(padding="5px 0" padding-bottom="10px" align="center" mj-class="T18-500" letter-spacing="1px") Dans une maison, il est parfois compliqué de bénéficier du WiFi dans les pièces éloignées de la box.
-        mj-text(padding="5px 0" padding-bottom="10px" align="center" mj-class="T18-500" letter-spacing="1px") Les répéteurs WiFi ont spécialement été conçus pour résoudre ce type de problème. Ils captent le signal de votre box pour le répéter dans les pièces où le WiFi était alors inaccessible. Format prise murale ou boitier avec plusieurs ports Ethernet intégrés, #[span(style="text-transform:uppercase") Netgear] propose une diversité de modèles pour répondre à vos besoins spécifiques.
-        mj-text(padding="5px 0" padding-bottom="10px" align="center" mj-class="T18-500" letter-spacing="1px") Découvrez les 5 choses à savoir sur les Répéteurs et profitez de nos offres promotionnelles pour vous équiper d'un WiFi performant au meilleur prix.
-        mj-button(align="center" mj-class="bgB cTW" href="#") Découvrir
+        mj-text(padding="5px 0" padding-bottom="20px" align="center" mj-class="T30-500" letter-spacing="1px") Boostez votre WiFi
+        mj-text(padding="5px 0" padding-bottom="20px" align="center" mj-class="T18-500" letter-spacing="1px") Dans une maison, il est parfois compliqué de bénéficier du WiFi dans les pièces éloignées de la box.
+        mj-text(padding="5px 0" padding-bottom="20px" align="center" mj-class="T18-500" letter-spacing="1px") #[strong Les répéteurs WiFi] ont spécialement été conçus pour résoudre ce type de problème. Ils captent le signal de votre box pour le répéter dans les pièces où le WiFi était alors inaccessible. Format prise murale ou boitier avec plusieurs ports Ethernet intégrés, #[span(style="text-transform:uppercase") Netgear] propose une diversité de modèles pour répondre à vos besoins spécifiques.
+        mj-text(padding="5px 0" padding-bottom="20px" align="center" mj-class="T18-500" letter-spacing="1px") #[strong Découvrez les 5 choses à savoir sur les Répéteurs et profitez de nos offres promotionnelles pour vous équiper d'un WiFi performant au meilleur prix.]
+        mj-button(align="center" mj-class="bgT1 cTW" href="#") Découvrir
