--- a/src/includes/_prod02.pug
+++ b/src/includes/_prod02.pug
@@ -8,14 +8,14 @@ mj-section(mj-class="bgW")
         mj-text(align="center" padding="0" mj-class="T18-500") Répéteur WiFi 6 Mesh AX1800
         mj-text(align="center" padding="0" mj-class="T18-500") (EAX20) #[strong Jusqu'à 1.8 Gbit/s]
         mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 179.99€] #[strong(style="color:#00A4DE") 129.99€]
-        mj-button( mj-class="cTW bgB" href="#") j'en profite
+        mj-button( mj-class="cTW bgT1" href="#") j'en profite
     //-Produit 2
     mj-column(width="50%" padding="10px")
         mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/net80wifi6.jpg" alt="Répéteur WiFi 6 Mesh AX6000")/
         mj-text(align="center" padding="0" mj-class="T18-500") Répéteur WiFi 6 Mesh AX6000
         mj-text(align="center" padding="0" mj-class="T18-500") (EAX80) #[strong jusqu'à 6 Gbit/s]
         mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 299.99€] #[strong(style="color:#00A4DE") 219.99€]
-        mj-button(mj-class="cTW bgB" href="#") j'en profite
+        mj-button(mj-class="cTW bgT1" href="#") j'en profite
     //-Produit 3
     mj-column(width="33.333333%" padding="10px")
         mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/netWhite20.jpg" alt="Répéteur WiFi Mesh Dual band (EX7300)")/
@@ -23,7 +23,7 @@ mj-section(mj-class="bgW")
         mj-text(align="center" padding="0" mj-class="T18-500") Dual band (EX7300)
         mj-text(align="center" padding="0" mj-class="T18-500") #[strong Jusqu'à 2.2 Gbit/s]
         mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 94.99€] #[strong(style="color:#00A4DE") 74.99€]
-        mj-button(mj-class="cTW bgB" href="#") j'en profite
+        mj-button(mj-class="cTW bgT1" href="#") j'en profite
     //-Produit 4
     mj-column(width="33.333333%" padding="10px")
         mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/netBlack25L.jpg" alt="Répéteur WiFi Mesh Dual band (EX7700)")/
@@ -31,7 +31,7 @@ mj-section(mj-class="bgW")
         mj-text(align="center" padding="0" mj-class="T18-500") Dual band (EX7700)
         mj-text(align="center" padding="0" mj-class="T18-500") #[strong Jusqu'à 2.2 Gbit/s]
         mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 429.99€] #[strong(style="color:#00A4DE") 379.99€]
-        mj-button(mj-class="cTW bgB" href="#") j'en profite
+        mj-button(mj-class="cTW bgT1" href="#") j'en profite
     //-Produit 5
     mj-column(width="33.333333%" padding="10px")
         mj-image(padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/netBlack25h.jpg" alt="Répéteur WiFi Mesh Tri band (EX8000)")/
@@ -39,4 +39,4 @@ mj-section(mj-class="bgW")
         mj-text(align="center" padding="0" mj-class="T18-500") Tri band (EX8000)
         mj-text(align="center" padding="0" mj-class="T18-500") #[strong jusqu'à 3 Gbit/s]
         mj-text(align="center" padding="0" padding-bottom="20px" mj-class="T18-500") #[span(style="color:#ff0909;text-decoration-line:line-through;") 169.99€] #[strong(style="color:#00A4DE") 144.99€]
-        mj-button(mj-class="cTW bgB" href="#") j'en profite
+        mj-button(mj-class="cTW bgT1" href="#") j'en profite
