--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -61,11 +61,11 @@
     </mj-section>
     <mj-section padding="20px" mj-class="bgW">
       <mj-column border="1px solid #cecece" padding="10px">
-        <mj-text padding="5px 0" padding-bottom="10px" align="center" mj-class="T18-500" letter-spacing="1px">Boostez votre WiFi</mj-text>
-        <mj-text padding="5px 0" padding-bottom="10px" align="center" mj-class="T18-500" letter-spacing="1px">Dans une maison, il est parfois compliqué de bénéficier du WiFi dans les pièces éloignées de la box.</mj-text>
-        <mj-text padding="5px 0" padding-bottom="10px" align="center" mj-class="T18-500" letter-spacing="1px">Les répéteurs WiFi ont spécialement été conçus pour résoudre ce type de problème. Ils captent le signal de votre box pour le répéter dans les pièces où le WiFi était alors inaccessible. Format prise murale ou boitier avec plusieurs ports Ethernet intégrés, <span style="text-transform:uppercase">Netgear</span> propose une diversité de modèles pour répondre à vos besoins spécifiques.</mj-text>
-        <mj-text padding="5px 0" padding-bottom="10px" align="center" mj-class="T18-500" letter-spacing="1px">Découvrez les 5 choses à savoir sur les Répéteurs et profitez de nos offres promotionnelles pour vous équiper d'un WiFi performant au meilleur prix.</mj-text>
-        <mj-button align="center" mj-class="bgB cTW" href="#">Découvrir</mj-button>
+        <mj-text padding="5px 0" padding-bottom="20px" align="center" mj-class="T30-500" letter-spacing="1px">Boostez votre WiFi</mj-text>
+        <mj-text padding="5px 0" padding-bottom="20px" align="center" mj-class="T18-500" letter-spacing="1px">Dans une maison, il est parfois compliqué de bénéficier du WiFi dans les pièces éloignées de la box.</mj-text>
+        <mj-text padding="5px 0" padding-bottom="20px" align="center" mj-class="T18-500" letter-spacing="1px"><strong>Les répéteurs WiFi</strong> ont spécialement été conçus pour résoudre ce type de problème. Ils captent le signal de votre box pour le répéter dans les pièces où le WiFi était alors inaccessible. Format prise murale ou boitier avec plusieurs ports Ethernet intégrés, <span style="text-transform:uppercase">Netgear</span> propose une diversité de modèles pour répondre à vos besoins spécifiques.</mj-text>
+        <mj-text padding="5px 0" padding-bottom="20px" align="center" mj-class="T18-500" letter-spacing="1px"><strong>Découvrez les 5 choses à savoir sur les Répéteurs et profitez de nos offres promotionnelles pour vous équiper d'un WiFi performant au meilleur prix.</strong></mj-text>
+        <mj-button align="center" mj-class="bgT1 cTW" href="#">Découvrir</mj-button>
       </mj-column>
     </mj-section>
     <mj-section mj-class="bgW" padding="0">
@@ -111,14 +111,14 @@
         <mj-text align="center" padding="0" mj-class="T18-500">Répéteur WiFi 6 Mesh AX1800</mj-text>
         <mj-text align="center" padding="0" mj-class="T18-500">(EAX20) <strong>Jusqu'à 1.8 Gbit/s</strong></mj-text>
         <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">179.99€</span> <strong style="color:#00A4DE">129.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
+        <mj-button mj-class="cTW bgT1" href="#">j'en profite</mj-button>
       </mj-column>
       <mj-column width="50%" padding="10px">
         <mj-image padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/net80wifi6.jpg" alt="Répéteur WiFi 6 Mesh AX6000"/>
         <mj-text align="center" padding="0" mj-class="T18-500">Répéteur WiFi 6 Mesh AX6000</mj-text>
         <mj-text align="center" padding="0" mj-class="T18-500">(EAX80) <strong>jusqu'à 6 Gbit/s</strong></mj-text>
         <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">299.99€</span> <strong style="color:#00A4DE">219.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
+        <mj-button mj-class="cTW bgT1" href="#">j'en profite</mj-button>
       </mj-column>
       <mj-column width="33.333333%" padding="10px">
         <mj-image padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/netWhite20.jpg" alt="Répéteur WiFi Mesh Dual band (EX7300)"/>
@@ -126,7 +126,7 @@
         <mj-text align="center" padding="0" mj-class="T18-500">Dual band (EX7300)</mj-text>
         <mj-text align="center" padding="0" mj-class="T18-500"><strong>Jusqu'à 2.2 Gbit/s</strong></mj-text>
         <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">94.99€</span> <strong style="color:#00A4DE">74.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
+        <mj-button mj-class="cTW bgT1" href="#">j'en profite</mj-button>
       </mj-column>
       <mj-column width="33.333333%" padding="10px">
         <mj-image padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/netBlack25L.jpg" alt="Répéteur WiFi Mesh Dual band (EX7700)"/>
@@ -134,7 +134,7 @@
         <mj-text align="center" padding="0" mj-class="T18-500">Dual band (EX7700)</mj-text>
         <mj-text align="center" padding="0" mj-class="T18-500"><strong>Jusqu'à 2.2 Gbit/s</strong></mj-text>
         <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">429.99€</span> <strong style="color:#00A4DE">379.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
+        <mj-button mj-class="cTW bgT1" href="#">j'en profite</mj-button>
       </mj-column>
       <mj-column width="33.333333%" padding="10px">
         <mj-image padding="0" padding-bottom="10px" width="680px" fluid-on-mobile="true" src="./images/netBlack25h.jpg" alt="Répéteur WiFi Mesh Tri band (EX8000)"/>
@@ -142,7 +142,7 @@
         <mj-text align="center" padding="0" mj-class="T18-500">Tri band (EX8000)</mj-text>
         <mj-text align="center" padding="0" mj-class="T18-500"><strong>jusqu'à 3 Gbit/s</strong></mj-text>
         <mj-text align="center" padding="0" padding-bottom="20px" mj-class="T18-500"><span style="color:#ff0909;text-decoration-line:line-through;">169.99€</span> <strong style="color:#00A4DE">144.99€</strong></mj-text>
-        <mj-button mj-class="cTW bgB" href="#">j'en profite</mj-button>
+        <mj-button mj-class="cTW bgT1" href="#">j'en profite</mj-button>
       </mj-column>
     </mj-section>
     <mj-section mj-class="bgB" padding="25px 30px">
